--- a/KRTT/res/values/strings.xml
+++ b/KRTT/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="title_bar">KRTT</string>
+    <string name="footer_add_bs">업체등록하기</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
