--- a/KRTT/res/values/strings.xml
+++ b/KRTT/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="title_bar">KRTT</string>
-    <string name="footer_add_bs">업체등록하기</string>
+    <string name="footer_add_bs">문의 : passion.people.krtt@gmail.com</string>
     
     
     <string name="menu_bs_list">업체목록</string>
@@ -13,7 +13,6 @@
     <string name="menu_bs_jeans">Jeans</string>
     <string name="menu_bs_pants">Pants</string>
     <string name="menu_bs_etc">ETC</string>
-    
     
     
     <string name="action_settings">Settings</string>
